--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="total_text">Totale:</string>
     <string name="minimum_text">Spesa Minima:</string>
     <string name="zero_text">0</string>
+    <string name="logout_text">LOGOUT</string>
 
 
     <string name="emailformat_error">Formato Email Invalido</string>
